<resources>
    <string name="app_name">OutilCuisson</string>
    <!-- Activité Ajouter -->
    <string name="ongletAjouter">Ajouter</string>
    <string name="titreAjouter">Description cuisson d\'un plat</string>
    <string name="labelPlat">Plat</string>
    <string name="labelTempsCuisson">Durée de la cuisson</string>
    <string name="labelTemp">Température</string>
    <string name="btnEffacer">Effacer</string>
    <string name="btnValider">Valider</string>

    <!-- Activité Afficher -->
    <string name="ongletAfficher">Afficher</string>
    <string name="titreAfficher">Temps de cuisson</string>
    <string name="labelDurée">Durée</string>
    <string name="labelDegres">Degrés</string>

    <!-- Toast -->
    <string name="toast">Le plat %s a bien été ajouté à la liste.</string>

    <!-- Boite Alerte -->
    <string name="titreAlerte">Erreur de saisie</string>
    <string name="messageAlerte">L\'une des informations saisies est incorrecte :\n
                                 - Nom du plat -> vide ou contient | \n
                                 - Durée de cuisson -> nulle ou trop grande (max 9h59) \n
                                 - Température -> nulle ou supérieure à 300 degrès \n\n
                                 Vérifiez les valeurs saisies !</string>
    <string name="retourAlerte">Retour</string>

    <!-- Menu contextuel -->
    <string name="libelle_option1">Supprimer</string>
    <string name="libelle_option2">Voir thermostat</string>
    <string name="libelle_option3">Annuler</string>

    <!-- AlertDialog Thermostat -->
    <string name="titreThermostat">Equivalent thermostat</string>
    <string name="messageThermostat">Cuisson du plat : %s\n\nPour obtenir la température de %d°C, vous devez régler
        votre four sur le thermostat %d
    </string>

    <!--Toast lecture/ecriture fichier -->
    <string name="fichierNonTrouve">Le fichier %s n\'existe pas</string>
    <string name="pbLectureFichier">Problème de lecture dans le fichier %s</string>

</resources>