<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    tools:context=".Ajouter">

    <TextView
        style="@style/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titreAjouter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Espace pour plus de clarté entre les 3 TextView -->
    <Space
        android:layout_marginBottom="@dimen/espaceLigne"
        android:layout_height="wrap_content"/>

    <TableRow>

        <TextView
            style="@style/textView"
            android:text="@string/labelPlat"
            android:layout_column="0"/>

        <EditText
            style="@style/editText"
            android:id="@+id/txtPlat"
            android:inputType="text"
            android:maxLength="18"
            android:layout_span="2"/>

    </TableRow>

    <!-- Espace pour plus de clarté entre les 3 TextView -->
    <Space
        android:layout_marginBottom="@dimen/espaceLigne"
        android:layout_height="wrap_content"/>

    <TableRow>
        <TextView
            style="@style/textView"
            android:text="@string/labelTempsCuisson"
            android:layout_column="0"
            android:layout_marginRight="@dimen/espaceTimePickerDroite"/>

    </TableRow>

    <TableRow>
        <!-- format anglais à changer -->
        <TimePicker
            style="@style/background"
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/hauteurTimePicker"
            android:layout_marginTop="@dimen/espaceTimePickerHaut"
            android:layout_column="1"
            android:layout_span="2"
            android:timePickerMode="spinner"/>
    </TableRow>

    <!-- Espace pour plus de clarté entre les 3 TextView -->
    <Space
        android:layout_marginBottom="@dimen/espaceLigne"
        android:layout_height="wrap_content"/>

    <TableRow>

        <TextView
            style="@style/textView"
            android:text="@string/labelTemp"/>

        <EditText
            style="@style/editText"
            android:id="@+id/txtTempérature"
            android:maxLength="3"
            android:inputType="number"
            android:layout_column="2"/>
    </TableRow>

    <!-- Espace pour plus de clarté entre les 3 TextView -->
    <Space
        android:layout_marginBottom="@dimen/espaceLigne"
        android:layout_height="wrap_content"/>

    <TableRow>
        <Button
            style="@style/bouton"
            android:id="@+id/btnEffacer"
            android:text="@string/btnEffacer"
            android:layout_marginRight="@dimen/espaceBoutons"
            android:layout_column="1"/>


        <Button
            style="@style/bouton"
            android:id="@+id/btnValider"
            android:text="@string/btnValider"
            android:layout_column="2"/>
    </TableRow>

</TableLayout>